git push komanda

--- a/index.html
+++ b/index.html
@@ -9,6 +9,27 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <main>
+    <section id="gitKomandos">
+      <ul>
+        <li> git branch
+          <ul>
+            <li>-f šakosVardas- naujos šakos kūrimas</li>
+            <li>-l - grąžina šakų sąrašą</li>
+          </ul>
+        </li>
+        <li> git checkout
+          <ul>
+            <li>šakosVardas - nukelia į nurodytą šaką</li>
+            <li>-b šakosVardas - sukuria naują šaką ir į ją nukelia</li>
+          </ul>
+        </li>
+        <li>git push
+          <li>  - nusiunti pakeitimus į išorinę repozitoriją</li>
+          <li>-u origin šakosVardas - viešini naują šaką</li>
+        </li>
+      </ul>
+    </section>
+  </main>
 </body>
 </html>
