--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./main.css">
   <script src="./main.js" defer></script>
-  <title>Document</title>
+  <title>Git Branch and Pull Requests</title>
 </head>
 <body>
   <main>
@@ -27,7 +27,7 @@
         <li>git push
           <ul>
             <li>  - nusiunti pakeitimus į išorinę repozitoriją</li>
-          <li>-u origin šakosVardas - viešini naują šaką</li>
+            <li>-u origin šakosVardas - viešini naują šaką</li>
           </ul>
           
         </li>
