--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./main.css">
   <script src="./main.js" defer></script>
-  <title>Document</title>
+  <title>Git Branching and Pull Requests</title>
 </head>
 <body>
   <main>
