--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <li>-u origin šakosVardas - viešini naują šaką</li>
           </ul>
         </li>
+        <li>git pull requests</li>
       </ul>
     </section>
   </main>
