--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
           </ul>
         </li>
         <li>git pull requests</li>
-      <li>bandom</li>
+        <li>bandom</li>
+        <li>one more</li>
       </ul>
     </section>
   </main>
